--- a/main/webapp/resources/css/style.css
+++ b/main/webapp/resources/css/style.css
@@ -249,33 +249,35 @@ a:hover {
 	color: white;
 }
 
-#removeall, #newmake a{
+#removeall a, #newmake a{
 	display: inline-block;
 	width: 85px;
 	height: 25px;
   	border:2px solid #0F4C81;
-  	text-align:center;
+  	text-align: center;
   	background-color : #0F4C81;
   	font-family: 'NanumGothicRegular';
   	text-decoration: none;
   	color: white;
 }
 
-#removeall, #newmake a:link{
+#removeall a:link, #newmake a:link{
 	text-decoration: none;
 	color: white;
 }
 
-#removeall, #newmake a:active {
-	color: white;
-}
-
-#removeall, #newmake a:visited {
+#removeall a:active, #newmake a:active {
 	text-decoration: none;
 	color: white;
 }
 
-#removeall, #newmake a:hover {
+#removeall a:visited, #newmake a:visited {
+	text-decoration: none;
+	color: white;
+}
+
+#removeall a:hover, #newmake a:hover {
+	text-decoration: none;
 	color: white;
 }
 
@@ -359,6 +361,41 @@ a:hover {
 
 input[type="file"] {
 	float: center;
+}
+
+.mypage .mybtn a {
+	width: 23%;
+	height: 100px;
+	float: left;
+	margin-left: 20px;
+	margin-bottom: 20px;
+	border: 1px solid #0F4C81;
+	background-color: #ffffff;
+	text-align: center;
+	font-size: 12.5pt;
+
+}
+
+.mypage .mybtn a:link {
+	text-decoration: none;
+	color: #0F4C81;
+}
+
+.mypage .mybtn a:active {
+	text-decoration: none;
+	background-color: #0F4C81;
+	color: white;
+}
+
+.mypage .mybtn a:visited {
+	text-decoration: none;
+	color: #0F4C81;
+}
+
+.mypage .mybtn a:hover {
+	text-decoration: none;
+	background-color: #0F4C81;
+	color: white;
 }
 
 
