쇼핑몰 만들기
1. 회원 정보 수정
2. 아이디&비밀번호 찾기(이메일)
3. 비밀번호 변경
4. 회원 탈퇴

--- a/main/webapp/resources/css/style.css
+++ b/main/webapp/resources/css/style.css
@@ -169,6 +169,11 @@ a:hover {
 	top: 340px;
 }
 
+#newcheck {
+	position: absolute;
+	top: 274px;
+}
+
 /* list */
 #list {
 	border-collapse : collapse;
