쇼핑몰 만들기
1. 수정

--- a/main/webapp/resources/css/style.css
+++ b/main/webapp/resources/css/style.css
@@ -174,6 +174,11 @@ a:hover {
 	top: 274px;
 }
 
+#admincheck {
+	position: absolute;
+	top: 335px;
+}
+
 /* list */
 #list {
 	border-collapse : collapse;
